Update HTML to track if file url exist -  22052025, 1732

--- a/public/index.html
+++ b/public/index.html
@@ -136,8 +136,10 @@
     fetch("markerManifest.json")
       .then(r => r.json())
       .then(data => {
+        console.log("manifest.urls →", data.urls);
         const scene = document.querySelector("a-scene");
         data.urls.forEach(url => {
+          console.log("Creating NFT tag for:", url);
           const id = url.split("/").pop();
           const nft = document.createElement("a-nft");
           nft.setAttribute("id",id);
